--- a/Speech_Emotion_Recognition.ipynb
+++ b/Speech_Emotion_Recognition.ipynb
@@ -6,7 +6,7 @@
       "name": "Speech Emotion Recognition.ipynb",
       "provenance": [],
       "mount_file_id": "1paMvLwEEnEZPHkJcPit-4zD59O5lKrsJ",
-      "authorship_tag": "ABX9TyNpj/gmbPbtHI0c15Nc0BcU",
+      "authorship_tag": "ABX9TyN8AgLWm20mKSKWzSkS13qD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,13 +160,13 @@
     {
       "cell_type": "code",
       "source": [
-        "#DataFlair - Initialize the Multi Layer Perceptron Classifier\n",
-        "model=MLPClassifier(alpha=0.01, batch_size=256, epsilon=1e-08, hidden_layer_sizes=(300,), learning_rate='adaptive', max_iter=500)"
+        "#Initialize the Multi Layer Perceptron Classifier\n",
+        "model=MLPClassifier(alpha=0.04, batch_size=356, epsilon=1e-08, hidden_layer_sizes=(200,), learning_rate='adaptive', max_iter=500)"
       ],
       "metadata": {
         "id": "vJSjtYF_tqTL"
       },
-      "execution_count": 25,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -180,9 +180,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wusIDJoFvU9r",
-        "outputId": "3d978933-0a51-4f19-f994-85c286db5b06"
+        "outputId": "0f9508d1-59a0-4d3a-ae17-61d437c9d1c2"
       },
-      "execution_count": 26,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,20 +204,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nki0iWZYv03N",
-        "outputId": "cd4db83e-d334-432c-8b8f-7ce3292b98a5"
+        "outputId": "744806e6-28b4-4edf-eba8-84be2ad04f84"
       },
-      "execution_count": 27,
+      "execution_count": 51,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:696: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (500) reached and the optimization hasn't converged yet.\n",
+            "  ConvergenceWarning,\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "MLPClassifier(alpha=0.01, batch_size=256, hidden_layer_sizes=(300,),\n",
+              "MLPClassifier(alpha=0.04, batch_size=356, hidden_layer_sizes=(200,),\n",
               "              learning_rate='adaptive', max_iter=500)"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 51
         }
       ]
     },
@@ -230,7 +238,7 @@
       "metadata": {
         "id": "zuKiJ5KWv7Xq"
       },
-      "execution_count": 28,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -247,15 +255,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7AUK1ytOwCIB",
-        "outputId": "3789bf87-d202-4711-af74-77e31d17af6e"
+        "outputId": "4d1befab-c53d-4967-a4a6-a28ce6c341f5"
       },
-      "execution_count": 29,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 60.42%\n"
+            "Accuracy: 71.88%\n"
           ]
         }
       ]
